Tweak settings.html

--- a/user-profile.html
+++ b/user-profile.html
@@ -94,11 +94,11 @@
 
               </div>
               <div class="user-settings-info">
-                <p><strong>Your Name:</strong> <span id="username">User123</span></p>
+                <p><strong>Your Name:</strong> <span id="username">Elmo</span></p>
                 <p><strong>Your Pronouns:</strong> <span id="pronouns">They/Them</span></p>
-                <p><strong>Buddy Name:</strong> <span id="buddy-name">User123</span></p>
+                <p><strong>Buddy Name:</strong> <span id="buddy-name">BuddyBear</span></p>
                 <p><strong>Buddy Age:</strong> <span id="buddy-age">0 days old</span></p>
-                <p><strong>Buddy Personality:</strong> <span id="buddy-personality">User123</span></p>
+                <p><strong>Buddy Personality:</strong> <span id="buddy-personality">Friendly</span></p>
                 <p><strong>Favourite Class:</strong> <span id="favourite-class">COMP1800</span></p>
                 <a href="settings.html">
                   <button class="option-btn">Edit Profile</button>
@@ -142,18 +142,51 @@
           <div class="friend-box">
             <h3 class="option-menu-head">Nick S.</h3>
             <img class="friend-img" src="/assets/imgs/nick-placeholder.jpg" />
+            <div class="friend-box-info">
             <p>Pee pee poo poo</p>
+            </div>
+            <div class="friend-box-buttons">
+              <a href="">
+                <button class="" id="send-encouragement"></button>
+              </a>
+              <a href="">
+                <button class="" id="send-direct-message"></button>
+              </a>
+            </div>
           </div>
+
           <div class="friend-box">
             <h3 class="option-menu-head">Timmy K.</h3>
             <img class="friend-img" src="/assets/imgs/timmy-placeholder.jpg" />
-            <p>Pee pee poo poo</p>
-          </div>
+            <div class="friend-box-info">
+              <p>Pee pee poo poo</p>
+              </div>
+              <div class="friend-box-buttons">
+                <a href="">
+                  <button class="" id="send-encouragement"></button>
+                </a>
+                <a href="">
+                  <button class="" id="send-direct-message"></button>
+                </a>
+              </div>
+            </div>
+          
           <div class="friend-box">
             <h3 class="option-menu-head">Caley R.</h3>
             <img class="friend-img" src="/assets/imgs/caley-placeholder.PNG" />
-            <p>Pee pee poo poo</p>
-          </div>
+            <div class="friend-box-info">
+              <p>Pee pee poo poo</p>
+              </div>
+              <div class="friend-box-buttons">
+                <a href="">
+                  <button class="" id="send-encouragement"></button>
+                </a>
+                <a href="">
+                  <button class="" id="send-direct-message"></button>
+                </a>
+              </div>
+            </div>
+
         </div>
       </div>
     </main>
