Still figuring out stupid tooltip

--- a/base-page-template.html
+++ b/base-page-template.html
@@ -61,6 +61,11 @@
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
+
+      <div class="tooltip">
+        <img src="https://via.placeholder.com/150" alt="User Profile">
+        <span class="tooltiptext">User Profile</span>
+      </div>
       
     </main>
 
