--- a/assets.html
+++ b/assets.html
@@ -7,6 +7,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="./scripts/script.js"></script>
 
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,6 +28,12 @@
 
 </head>
 <body>
+  <!-- Tooltip Example -->
+  <div class="tooltip" style="margin-top: 100px; margin-left: 100px;">
+    <img src="https://via.placeholder.com/150" alt="User Profile" style="width: 100px; height: 100px;">
+    <span class="tooltiptext">User Profile</span>
+  </div>
+
   <div id="buttons">
     <h1>Buttons</h1>
 
@@ -126,8 +133,6 @@
         <button id="" class="msg-popup-btn">Decline</button>
       </div>
     </div>
-
-
 
 </body>
 </html>
