--- a/settings.html
+++ b/settings.html
@@ -72,7 +72,7 @@
         <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy" height="250" width="250">
       </div>
 
-      <div class="d-flex justify-content-end mt-5">
+      <div id="edit-settings-buttons" class="d-flex justify-content-end mt-5">
         <button type="button" class="btn btn-secondary" id="edit-btn" onclick="edituserInfo()">Edit</button>
         <button type="button" class="btn btn-info" id="cancel-btn" onclick="cancelEdit()">Cancel</button>
         <button type="submit" class="btn btn-primary" onclick="saveUserInfo()">Save Settings</button>
