--- a/user-profile.html
+++ b/user-profile.html
@@ -45,7 +45,7 @@
     <header id="navbar">
       <nav id="nav-links">
         <a href="user-profile.html">
-          <div id="user-profile-btn" class="nav-btn" alt=""></div>
+          <div id="user-profile-btn" data-tooltip="User Profile" class="nav-btn" alt=""></div>
         </a>
         <a href="to-do-list.html">
           <div id="to-do-list-btn" class="nav-btn" alt=""></div>
@@ -141,7 +141,7 @@
         <div id="friends-list">
           <div class="friend-box">
             <h3 class="option-menu-head">Nick S.</h3>
-            <img class="friend-img" src="/assets/imgs/nick-placeholder.jpg" />
+            <img class="friend-img" src="/assets/animals/wolf.svg" />
             <div class="friend-box-info">
             <p>Pee pee poo poo</p>
             </div>
@@ -157,7 +157,7 @@
 
           <div class="friend-box">
             <h3 class="option-menu-head">Timmy K.</h3>
-            <img class="friend-img" src="/assets/imgs/timmy-placeholder.jpg" />
+            <img class="friend-img" src="/assets/animals/bear-sit.svg" />
             <div class="friend-box-info">
               <p>Pee pee poo poo</p>
               </div>
@@ -173,7 +173,7 @@
           
           <div class="friend-box">
             <h3 class="option-menu-head">Caley R.</h3>
-            <img class="friend-img" src="/assets/imgs/caley-placeholder.PNG" />
+            <img class="friend-img" src="/assets/animals/squirrel.svg" />
             <div class="friend-box-info">
               <p>Pee pee poo poo</p>
               </div>
