--- a/user-profile.html
+++ b/user-profile.html
@@ -80,28 +80,24 @@
               <h1 class="option-menu-head">User Profile</h1>
               <div id="user-photo-streak">
                 <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy">
-                <div class="user-summary">
-                  <h2>Day Streak</h2>
-                  <p><span class="streak-number">5</span> days</p>
-                </div>
-
                 <div class="friend-code-container">
-                  <h1>Your Friend Code</h1>
-                  <input type="text" id="friendCode" value="ABCD1234" readonly>
-                  <button onclick="copyToClipboard()">Copy Code</button>
+                  <h4>Your Friend Code</h4>
+                  <div id="friend-code-input">
+                    <input type="text" id="friendCode" value="ABCD1234" readonly>
+                    <button id="copy-to-clipboard" class="option-btn" onclick="copyToClipboard()">Copy</button>
+                  </div>
                   <p id="copyMessage" class="hidden">Copied to clipboard!</p>
                 </div>
-
               </div>
               <div class="user-settings-info">
-                <p><strong>Your Name:</strong> <span id="username">Elmo</span></p>
-                <p><strong>Your Pronouns:</strong> <span id="pronouns">They/Them</span></p>
-                <p><strong>Buddy Name:</strong> <span id="buddy-name">BuddyBear</span></p>
-                <p><strong>Buddy Age:</strong> <span id="buddy-age">0 days old</span></p>
-                <p><strong>Buddy Personality:</strong> <span id="buddy-personality">Friendly</span></p>
-                <p><strong>Favourite Class:</strong> <span id="favourite-class">COMP1800</span></p>
+                <p><strong>Your Name:</strong><br><span id="username">Elmo</span></p>
+                <p><strong>Your Pronouns:</strong><br><span id="pronouns">They/Them</span></p>
+                <p><strong>Buddy Name:</strong><br><span id="buddy-name">BuddyBear</span></p>
+                <p><strong>Buddy Age:</strong><br><span id="buddy-age">0 days old</span></p>
+                <p><strong>Buddy Personality:</strong><br><span id="buddy-personality">Friendly</span></p>
+                <p><strong>Favourite Class:</strong><br><span id="favourite-class">COMP1800</span></p>
                 <a href="settings.html">
-                  <button class="option-btn">Edit Profile</button>
+                  <button id="edit-profile-CTA" class="option-btn">Edit Profile</button>
                 </a>
               </div>
             </div>
