Finish profile responsivity

--- a/user-profile.html
+++ b/user-profile.html
@@ -78,7 +78,7 @@
           <div id="user-info">
             <div id="user-card" class="user-card">
               <h1 class="option-menu-head">User Profile</h1>
-              <div id="user-photo-streak">
+              <div id="user-photo-code">
                 <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy">
                 <div class="friend-code-container">
                   <h4>Your Friend Code</h4>
@@ -90,12 +90,12 @@
                 </div>
               </div>
               <div class="user-settings-info">
-                <p><strong>Your Name:</strong><br><span id="username">Elmo</span></p>
-                <p><strong>Your Pronouns:</strong><br><span id="pronouns">They/Them</span></p>
-                <p><strong>Buddy Name:</strong><br><span id="buddy-name">BuddyBear</span></p>
-                <p><strong>Buddy Age:</strong><br><span id="buddy-age">0 days old</span></p>
-                <p><strong>Buddy Personality:</strong><br><span id="buddy-personality">Friendly</span></p>
-                <p><strong>Favourite Class:</strong><br><span id="favourite-class">COMP1800</span></p>
+                <p class="half-width"><strong>Your Name:</strong><br><span id="username">Elmo</span></p>
+                <p class="half-width"><strong>Your Pronouns:</strong><br><span id="pronouns">They/Them</span></p>
+                <p class="half-width"><strong>Buddy Name:</strong><br><span id="buddy-name">BuddyBear</span></p>
+                <p class="half-width"><strong>Buddy Age:</strong><br><span id="buddy-age">0 days old</span></p>
+                <p class="half-width"><strong>Buddy Personality:</strong><br><span id="buddy-personality">Friendly</span></p>
+                <p class="half-width"><strong>Favourite Class:</strong><br><span id="favourite-class">COMP1800</span></p>
                 <a href="settings.html">
                   <button id="edit-profile-CTA" class="option-btn">Edit Profile</button>
                 </a>
@@ -138,9 +138,6 @@
           <div class="friend-box">
             <h3 class="option-menu-head">Nick S.</h3>
             <img class="friend-img" src="/assets/animals/wolf.svg" />
-            <div class="friend-box-info">
-            <p>Pee pee poo poo</p>
-            </div>
             <div class="friend-box-buttons">
               <a href="">
                 <button class="" id="send-encouragement"></button>
@@ -154,9 +151,6 @@
           <div class="friend-box">
             <h3 class="option-menu-head">Timmy K.</h3>
             <img class="friend-img" src="/assets/animals/bear-sit.svg" />
-            <div class="friend-box-info">
-              <p>Pee pee poo poo</p>
-              </div>
               <div class="friend-box-buttons">
                 <a href="">
                   <button class="" id="send-encouragement"></button>
@@ -170,9 +164,6 @@
           <div class="friend-box">
             <h3 class="option-menu-head">Caley R.</h3>
             <img class="friend-img" src="/assets/animals/squirrel.svg" />
-            <div class="friend-box-info">
-              <p>Pee pee poo poo</p>
-              </div>
               <div class="friend-box-buttons">
                 <a href="">
                   <button class="" id="send-encouragement"></button>
@@ -201,4 +192,3 @@
 </body>
 
 </html>
-
