--- a/groups.html
+++ b/groups.html
@@ -162,6 +162,7 @@
 
           <!-- Chat Container -->
             <div id="chat-container" class="">
+              <h2 class="option-menu-head">Message Board</h2>
               <!-- Chat Display Area -->
               <div id="chat-display" class="">
                 <!-- Messages will be appended here -->
