--- a/user-profile.html
+++ b/user-profile.html
@@ -81,7 +81,7 @@
               <div id="user-photo-code">
                 <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy">
                 <div class="friend-code-container">
-                  <h4>Your Friend Code</h4>
+                  <h5>Your Friend Code</h5>
                   <div id="friend-code-input">
                     <input type="text" id="friendCode" value="ABCD1234" readonly>
                     <button id="copy-to-clipboard" class="option-btn" onclick="copyToClipboard()">Copy</button>
@@ -96,9 +96,11 @@
                 <p class="half-width"><strong>Buddy Age:</strong><br><span id="buddy-age">0 days old</span></p>
                 <p class="half-width"><strong>Buddy Personality:</strong><br><span id="buddy-personality">Friendly</span></p>
                 <p class="half-width"><strong>Favourite Class:</strong><br><span id="favourite-class">COMP1800</span></p>
-                <a href="settings.html">
-                  <button id="edit-profile-CTA" class="option-btn">Edit Profile</button>
-                </a>
+                <div id="edit-button-box">
+                  <a href="settings.html">
+                    <button id="edit-profile-CTA" class="option-btn">Edit Profile</button>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
