--- a/to-do-list.html
+++ b/to-do-list.html
@@ -57,7 +57,43 @@
   </header>
 
     <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <main id="personal-task-page" class="container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+
+    <div id="personal-task-form">
+      <fieldset class="mb-3" id="personal-task" >
+            <div class="form-group">
+              <label id="task-heading">Task</label>
+              <input type="text" id="task" class="form-control" placeholder="Enter task name">
+            </div>
+            <div class="form-group">
+              <label>Due date</label>
+              <input type="date" id="due-date">
+            </div>
+
+            <label for="taskPriorityDropdown">Priority</label>
+            <div class="custom-select">
+                <select id="priorityDropdown" name="options">
+                    <option value="none" data-icon="assets/SVG/flag-none.svg">None</option>
+                    <option value="low" data-icon="assets/SVG/flag-low.svg">Low</option>
+                    <option value="normal" data-icon="assets/SVG/flag-normal.svg">Normal</option>
+                    <option value="high" data-icon="assets/SVG/flag-high.svg">High</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+              <label>Description</label>
+              <input type="text" id="description" class="form-control" placeholder="Enter description">
+            </div>
+      </fieldset>
+
+          <div id="edit-settings-buttons" class="d-flex justify-content-end mt-5">
+            <button type="submit" class="btn btn-primary" onclick="setupTasks()">Submit</button>
+          </div>
+    </div>
+
+    <div id="tasks-content" class="main-content">
+      <div id="task-container" class="card"></div>
+    </div>
 
   
     </main>
@@ -70,7 +106,7 @@
   <script src="./scripts/script.js"></script>
   <script src="./scripts/firebase_API.js"></script>
   <script src="./scripts/skeleton.js"></script>
-  <script src="./scripts/self-care-tasks.js"></script>
+  <script src="./scripts/to-do-list-task.js"></script>
 </body>
 
 </html>
