Updaiting personal tasks

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -80,9 +80,6 @@
         <div id="to-do-list-avatars">
           <div id="personal-CTA-buttons">
             <a href="#">
-              <button id="my-tasks-btn" class="reg-btn">My Tasks</button>
-            </a>
-            <a href="#">
               <button id="add-my-task" class="reg-btn">Add Task</button>
             </a>
           </div>
@@ -90,7 +87,7 @@
         </div>
 
         <div id="my-to-do-list">
-          <div id="task-container" class="card"></div>
+          <div id="task-container" class="my-tasks-container card"></div>
         </div>
 
         <div id="personal-task-form">
