--- a/my-awards.html
+++ b/my-awards.html
@@ -40,6 +40,7 @@
 </head>
 
 <body>
+
   <!-- Navbar -->
   <header id="navbar">
     <nav id="nav-links">
@@ -62,7 +63,7 @@
   </header>
 
     <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <main id="awards-page" class="bg-container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
       <!-- Top Buttons -->
       <a href="about-us.html">
@@ -73,62 +74,49 @@
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
-      <div class="awards-container">
-        <h1>My Awards</h1>
-        
-        <div class="award-category">
-            <h2>Academics</h2>
-            <div class="award">
-                <img src="icon1.png" alt="Award Icon">
-                <p>Outstanding Assignment</p>
-            </div>
-            <div class="award">
-                <img src="icon2.png" alt="Award Icon">
-                <p>Top Quiz Score</p>
-            </div>
-            <div class="award">
-                <img src="icon3.png" alt="Award Icon">
-                <p>Class Participation Star</p>
-            </div>
-        </div>
-        
-        <div class="award-category">
-            <h2>Personal</h2>
-            <div class="award">
-                <img src="icon4.png" alt="Award Icon">
-                <p>Time Management Pro</p>
-            </div>
-            <div class="award">
-                <img src="icon5.png" alt="Award Icon">
-                <p>Self-Care Champion</p>
-            </div>
-            <div class="award">
-                <img src="icon6.png" alt="Award Icon">
-                <p>Mindfulness Master</p>
-            </div>
-        </div>
+      <div id="" class="main-content">
+        <h1 id="awards-page-head">My Awards & Accomplishments</h1>
 
-        <div class="award-category">
-            <h2>Social</h2>
-            <div class="award">
-                <img src="icon7.png" alt="Award Icon">
-                <p>Community Helper</p>
-            </div>
-            <div class="award">
-                <img src="icon8.png" alt="Award Icon">
-                <p>Team Player</p>
-            </div>
-            <div class="award">
-                <img src="icon9.png" alt="Award Icon">
-                <p>Friendship Builder</p>
-            </div>
-        </div>
-    </div>
+        <div id="my-awards">
+          <div id="" class="awards-collection">
+            <h2 class="collection-head"><img src="/assets/awards/code-diamond.svg" class="collection-icon"> Programming</h2>
 
+            <div id="" class="award-card">
+              <img src="/assets/awards/python.svg" class="award-icon">
+              <h3>Python Genius</h3>
+            </div>
+
+            <div id="" class="award-card">
+              <img src="/assets/awards/javascript.svg" class="award-icon">
+              <h3>JavaScript Boss</h3>
+            </div>
+
+            <div id="" class="award-card">
+              <img src="/assets/awards/css.svg" class="award-icon">
+              <h3>CSS Master</h3>
+            </div>
+
+            <div id="" class="award-card">
+              <img src="/assets/awards/html.svg" class="award-icon">
+              <h3>HTML Architect</h3>
+            </div>
+
+            <div id="" class="award-card">
+              <img src="/assets/awards/node-js.svg" class="award-icon">
+              <h3>Node JS Elite</h3>
+            </div>
+
+            <div id="" class="award-card">
+              <img src="/assets/awards/java.svg" class="award-icon">
+              <h3>Java Whisperer</h3>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </main>
 
     <nav id="footerPlaceholder"></nav>
-
-    </main>
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
