More Personal tasks

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -87,7 +87,7 @@
         </div>
 
         <div id="my-to-do-list">
-          <div id="task-container" class="my-tasks-container card"></div>
+          <div id="task-container" class="my-tasks-container"></div>
         </div>
 
         <div id="personal-task-form">
