--- a/to-do-list.html
+++ b/to-do-list.html
@@ -1,166 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App" />
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap Library CSS CDN go here -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <!-- Boostrap Library JS CDN  go here -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+<head>
+  <title>My BCIT Project</title>
+  <meta name="comp1800 template" content="My 1800 App" />
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Other libraries go here -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"
-    />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Bootstrap Library CSS CDN go here -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- Boostrap Library JS CDN  go here -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-    <!-- Link to styles of your own -->
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/assets.css" />
-    <link rel="stylesheet" href="./styles/responsive.css" />
-  </head>
+  <!-- Other libraries go here -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <body>
-    <!-- Navbar -->
-    <header id="navbar">
-      <nav id="nav-links">
-        <a href="user-profile.html">
-          <div id="user-profile-btn" class="nav-btn" alt=""></div>
-        </a>
-        <a href="to-do-list.html">
-          <div id="to-do-list-btn" class="nav-btn" alt=""></div>
-        </a>
-        <a href="groups.html">
-          <div id="groups-btn" class="nav-btn" alt=""></div>
-        </a>
-        <a href="my-awards.html">
-          <div id="my-awards-btn" class="nav-btn" alt=""></div>
-        </a>
-        <a href="settings.html">
-          <div id="settings-btn" class="nav-btn" alt=""></div>
-        </a>
-      </nav>
-    </header>
+  <!-- Link to styles of your own -->
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/assets.css" />
+  <link rel="stylesheet" href="./styles/responsive.css" />
+</head>
 
-    <!-- Main Content -->
-    <main id="personal-task-page" class="bg-container">
-      <!-- Top Buttons -->
-      <a href="about-us.html">
-        <div id="about-us-btn" class="nav-btn" alt=""></div>
+<body>
+  <!-- Navbar -->
+  <header id="navbar">
+    <nav id="nav-links">
+      <a href="user-profile.html">
+        <div id="user-profile-btn" class="nav-btn" alt=""></div>
       </a>
-      <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
+      <a href="to-do-list.html">
+        <div id="to-do-list-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="groups.html">
+        <div id="groups-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="my-awards.html">
+        <div id="my-awards-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="settings.html">
+        <div id="settings-btn" class="nav-btn" alt=""></div>
+      </a>
+    </nav>
+  </header>
 
-      <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-      <div id="to-do-list-content" class="main-container">
-        <div id="to-do-list-avatars">
-          <div id="personal-CTA-buttons">
-            <a href="#">
-              <button id="add-my-task" class="reg-btn">Add Task</button>
-            </a>
+  <!-- Main Content -->
+  <main id="personal-task-page" class="bg-container">
+    <!-- Top Buttons -->
+    <a href="about-us.html">
+      <div id="about-us-btn" class="nav-btn" alt=""></div>
+    </a>
+    <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
+
+    <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <div id="to-do-list-content" class="main-container">
+      <div id="to-do-list-avatars">
+        <div id="personal-CTA-buttons">
+          <a href="#">
+            <button id="add-my-task" class="reg-btn">Add Task</button>
+          </a>
+        </div>
+        <img src="/assets/animals/squirrel.svg" width="300px" id="buddy">
+      </div>
+
+      <div id="my-to-do-list">
+        <div id="task-container" class="my-tasks-container card"></div>
+      </div>
+
+      <div id="personal-task-form">
+        <fieldset class="mb-3" id="personal-task">
+          <div class="form-group">
+            <label id="task-heading">Task</label>
+            <input type="text" id="task" class="form-control" placeholder="Enter task name" />
           </div>
-          <img src="/assets/animals/squirrel.svg" width="300px">
-        </div>
-
-        <div id="my-to-do-list">
-          <div id="task-container" class="my-tasks-container card"></div>
-        </div>
-
-        <div id="personal-task-form">
-          <fieldset class="mb-3" id="personal-task">
-            <div class="form-group">
-              <label id="task-heading">Task</label>
-              <input
-                type="text"
-                id="task"
-                class="form-control"
-                placeholder="Enter task name"
-              />
-            </div>
-            <div class="form-group">
-              <label>Due date</label>
-              <input type="date" id="due-date" />
-            </div>
-
-            <label for="taskPriorityDropdown">Priority</label>
-            <div class="custom-select">
-              <select id="priorityDropdown" name="options">
-                <option value="none" data-icon="assets/SVG/flag-none.svg">
-                  None
-                </option>
-                <option value="low" data-icon="assets/SVG/flag-low.svg">
-                  Low
-                </option>
-                <option value="normal" data-icon="assets/SVG/flag-normal.svg">
-                  Normal
-                </option>
-                <option value="high" data-icon="assets/SVG/flag-high.svg">
-                  High
-                </option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label>Description</label>
-              <input
-                type="text"
-                id="description"
-                class="form-control"
-                placeholder="Enter description"
-              />
-            </div>
-          </fieldset>
-
-          <div
-            id="edit-settings-buttons"
-            class="d-flex justify-content-end mt-5"
-          >
-            <button
-              type="submit"
-              class="btn btn-primary"
-              onclick="setupTasks()"
-            >
-              Submit
-            </button>
+          <div class="form-group">
+            <label>Due date</label>
+            <input type="date" id="due-date" />
           </div>
-        </div>
 
+          <label for="taskPriorityDropdown">Priority</label>
+          <div class="custom-select">
+            <select id="priorityDropdown" name="options">
+              <option value="none" data-icon="assets/SVG/flag-none.svg">
+                None
+              </option>
+              <option value="low" data-icon="assets/SVG/flag-low.svg">
+                Low
+              </option>
+              <option value="normal" data-icon="assets/SVG/flag-normal.svg">
+                Normal
+              </option>
+              <option value="high" data-icon="assets/SVG/flag-high.svg">
+                High
+              </option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label>Description</label>
+            <input type="text" id="description" class="form-control" placeholder="Enter description" />
+          </div>
+        </fieldset>
+
+        <div id="edit-settings-buttons" class="d-flex justify-content-end mt-5">
+          <button type="submit" class="btn btn-primary" onclick="setupTasks()">
+            Submit
+          </button>
         </div>
       </div>
-    </main>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+    </div>
+    </div>
+  </main>
 
-    <!-- Link to scripts of your own -->
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/firebase_API.js"></script>
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/to-do-list-task.js"></script>
-  </body>
+  <!---------------------------------------------->
+  <!-- Your own JavaScript functions go here    -->
+  <!---------------------------------------------->
+
+  <!-- Link to scripts of your own -->
+  <script src="./scripts/script.js"></script>
+  <script src="./scripts/firebase_API.js"></script>
+  <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/to-do-list-task.js"></script>
+</body>
+
 </html>
