--- a/to-do-list.html
+++ b/to-do-list.html
@@ -78,11 +78,9 @@
       <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
       <div id="to-do-list-content" class="main-container">
         <div id="to-do-list-avatars">
-          <div id="personal-CTA-buttons">
-            <a href="#">
-              <button id="add-my-task" class="reg-btn">Add Task</button>
-            </a>
-          </div>
+          <a href="#personal-task-form">
+            <button id="add-my-task" class="reg-btn">Add Task</button>
+          </a>
           <img src="/assets/animals/squirrel.svg" width="300px">
         </div>
 
