--- a/to-do-list.html
+++ b/to-do-list.html
@@ -79,13 +79,14 @@
       </div>
 
       <div id="personal-task-form">
+        <h2 class="heading-banner">Add A Task</h2>
         <fieldset class="mb-3" id="personal-task">
           <div class="form-group">
-            <label id="task-heading">Task</label>
+            <label id="task-heading">Task Name:</label><br>
             <input type="text" id="task" class="form-control" placeholder="Enter task name" />
           </div>
           <div class="form-group">
-            <label>Due date</label>
+            <label>Due Date:</label><br>
             <input type="date" id="due-date" />
           </div>
 
@@ -109,14 +110,13 @@
 
           <div class="form-group">
             <label>Description</label>
-            <input type="text" id="description" class="form-control" placeholder="Enter description" />
+            <textarea id="description" class="form-control" rows="3" placeholder="Enter description"></textarea>
           </div>
         </fieldset>
 
-        <div id="edit-settings-buttons" class="d-flex justify-content-end mt-5">
-          <button type="submit" class="btn btn-primary" onclick="setupTasks()">
-            Submit
-          </button>
+        <button id="my-task-submit" type="submit" class="green-btn" onclick="setupTasks()">
+          Submit
+        </button>
         </div>
       </div>
 
