--- a/groups.html
+++ b/groups.html
@@ -94,12 +94,14 @@
         <!-- Tasks will be dynamically inserted here -->
         <div id="task-list-container">
           <h2>Group Tasks</h2>
-          <a href="#group-task-creation">
-            <button id="CTA-create-task">Add Group Task</button>
-          </a>
-          <a href="#chat-container">
-            <button id="CTA-chat">View Chat</button>
-          </a>
+          <div id="group-cta-btns">
+            <a href="#group-task-creation">
+              <button id="CTA-create-task">Add Group Task</button>
+            </a>
+            <a href="#chat-container">
+              <button id="CTA-chat">View Chat</button>
+            </a>
+         </div>
           <div id="task-list"></div>
         </div>
 
@@ -110,7 +112,7 @@
             <form>
 
               <div id="task-name">
-                <label for="task" id="user-greeting2">Task</label>
+                <label for="task">Task</label>
                 <input
                   type="text"
                   id="task"
@@ -122,7 +124,7 @@
 
 
               <div id="task-date">
-                <label for="due-date" id="user-greeting2">Due Date</label>
+                <label for="due-date">Due Date</label>
                 <input
                   type="date"
                   id="due-date"
