--- a/groups.html
+++ b/groups.html
@@ -164,7 +164,7 @@
 
           <!-- Chat Container -->
             <div id="chat-container" class="">
-              <h2 class="option-menu-head">Message Board</h2>
+              <h2 class="heading-banner option-menu-head" width="100%">Message Board</h2>
               <!-- Chat Display Area -->
               <div id="chat-display" class="">
                 <!-- Messages will be appended here -->
