add css to settings page

--- a/settings.html
+++ b/settings.html
@@ -67,7 +67,7 @@
     <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
 
     <div id="settings-form">
-      <h2>Settings Form</h2>
+      <h2 id="setting-header">Settings Form</h2>
       <div id="avatar-preview">
         <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy" height="250" width="250">
       </div>
